// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web installer (default github) 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "url": "TestApp-WebSetup-1.1.0.exe",
          },
        ],
        "packages": Object {
          "arm64": Object {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-arm64.nsis.7z",
            "path": "TestApp-1.1.0-arm64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "ia32": Object {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-ia32.nsis.7z",
            "path": "TestApp-1.1.0-ia32.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "x64": Object {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
        "path": "TestApp-WebSetup-1.1.0.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "Test App ßW Web Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-WebSetup-1.1.0.exe",
      "updateInfo": Object {
        "packages": Object {
          "arm64": Object {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-arm64.nsis.7z",
            "path": "TestApp-1.1.0-arm64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "ia32": Object {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-ia32.nsis.7z",
            "path": "TestApp-1.1.0-ia32.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "x64": Object {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
      },
    },
    Object {
      "arch": "arm64",
      "file": "TestApp-1.1.0-arm64.nsis.7z",
    },
    Object {
      "arch": "ia32",
      "file": "TestApp-1.1.0-ia32.nsis.7z",
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "url": "Test App ßW Web Setup 1.1.0.exe",
          },
        ],
        "packages": Object {
          "x64": Object {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
        "path": "Test App ßW Web Setup 1.1.0.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW Web Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-WebSetup-1.1.0.exe",
      "updateInfo": Object {
        "packages": Object {
          "x64": Object {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
      },
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer, safe name on github 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "url": "WorkFlowy.exe",
          },
        ],
        "packages": Object {
          "x64": Object {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
        "path": "WorkFlowy.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
    Object {
      "arch": "x64",
      "file": "WorkFlowy.exe",
      "updateInfo": Object {
        "packages": Object {
          "x64": Object {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.1.0-x64.nsis.7z",
            "path": "TestApp-1.1.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
      },
    },
  ],
}
`;
